static/index.css
@import url('https://css.gg/select.css');

:root {
    --color-dark: #086788;
    --color-main: #06aed5;
    --color-grey: #eee;
    --color-light: #faffea;
    --color-accent: #fc7a1e;
    --color-accent-font: #fff;
    --color-bg: #fcfcfc;
    --color-link: #888;
    --color-link-selected: #222;
    --color-nav-bar: #fcfcfc;
    --font-small: 9pt;
    --font-medium: 11pt;
    --font-big: 13pt;
}

body {
    font-family: arial, verdana, sans-serif;
    font-size: var(--font-medium);
    position: relative;
    background-color: var(--color-bg);
    color: var(--color-dark);
    margin: 0px;
    padding-top: 40px;
}

.main-text-input {
    border: 1px var(--color-grey) solid;
    padding: 0.5em;
    margin: 0.25em;
    width: 100%;
}

.main-text-input:focus {
    border-color: var(--color-dark);
}

.transaction-input {
    border: solid 1px transparent;
    background: transparent;
    padding: 4px;
    width: 100%;
    outline: none;
    color: #222;
    pointer-events: none;
    font-size: var(--font-medium);
    border-radius: 3px;
}

.edited-transaction .transaction-input {
    border-color: #ddd;
    background: #fff;
    pointer-events: auto;
}

.transaction-input:focus {
    border-color: #666;
}

.transaction-button {
    background: #ffffff;
    border: 1px solid #aaaaaa;
    padding: 4px 1em 4px 1em;
    font-size: var(--font-medium);
    visibility: hidden;
    opacity: 0;
    color: var(--color-dark);
    border-radius: 3px;
    margin: 0px 2px 0px 2px;
    transition: all 0.2s;
}

.transaction-button:hover {
    background-color: var(--color-dark);
    color: #ccc;
}

.edited-transaction .transaction-button {
    visibility: visible;
    opacity: 1;
}

.transaction-header-wrapper {
    display: grid;
    grid-template-columns: 4fr 8fr;
    padding: 2px;
}
 
.transactions-header {
    display: grid;
    grid-template-columns: 4fr 8fr 8fr 3fr 1fr;
    position: relative;
    z-index: 998;
}

.transactions-amount-header {
    text-align: right;
}

.transactions-header > div {
    padding: 4px;
    background-color: #424242;
    color: #f6f6f6;
    font-size: var(--font-medium);
}

.transaction-row-wrapper {
    display: grid;
    grid-template-columns: 1fr 1fr;
    padding-top: 0.5em;
    padding-bottom: 0.5em;
    border-bottom: 1px solid #dddddd;
    position: relative;
    transition: all 0.25s;
}
.empty-transaction-row {
    vertical-align: middle;
    border: 0px;
    color: #888888;
    padding: 1em;
    text-align: center;
}

.transaction-row-wrapper:hover, .edited-transaction {
    box-shadow: 0px 0px 10px #cccccc;
}

.transaction-entries-wrapper {
    display: grid;
    grid-template-columns: 1fr;
}

.transaction-entries-wrapper > div {
    display: grid;
    grid-template-columns: 8fr 3fr 1fr;
    padding: 2px;
}

.transaction-buttons-wrapper {
    display: inline-block;
    position: absolute;
    bottom: 0.5em;
    left: 2px;
}

.transaction-buttons-wrapper input {
    width: 100px;
}

/*
.accounts-wrapper > div:nth-child(odd) {
    background-color: #f8f8f8;
}
*/
.account-row {
    font-size: var(--font-big);
    font-weight: none;
    padding-left: 1em;
    margin: 0px;
    border-top: 1px solid #ddd;
    width: 100%;
    box-sizing: border-box;
    background-color: #fdfdfd;
    position: relative;
}

.account-depth-0 {
    background-color: #f5f5f5;
}

.collapsed .account-row {
    display: none;
}

.collapsed-button-container {
    opacity: 0.6;
    color: #444;
    margin: auto;
}

.account-collapsable:hover {
    color: #111;
    background-color: #eee;
}

.collapsed .collapsed-button-container {
}

.account-row-name {
    text-align: left;
}

.account-row-balance {
    text-align: right;
    padding-right: 1em;
}

.account-current-row-container {
    display: grid;
    grid-template-columns: 30px 8fr 2fr;
    padding-top: 0.6em;
    padding-bottom: 0.6em;
}

.popup-message {
    position: fixed;
    top: 1em;
    left: 0;
    right: 0;
    width: 300px;
    margin-left: auto;
    margin-right: auto;
    padding: 0.5em 1em 0.5em 1em;
    background-color: var(--color-light);
    border-radius: 20px;
    transition: all 2s;
    visibility: visible;
    z-index: 1000;
}

.error-message {
    background-color: var(--color-accent);
    color: var(--color-dark);
}

.animated {
    -webkit-animation-duration: 1s;animation-duration: 1s;
    -webkit-animation-fill-mode: both;animation-fill-mode: both;
}
@-webkit-keyframes fadeOut {
    0% {opacity: 1;}
    100% {opacity: 0;}
}
 
@keyframes fadeOut {
    0% {opacity: 1;}
    100% {opacity: 0;}
}
 
.fadeOut {
    -webkit-animation-name: fadeOut;
    animation-name: fadeOut;
}

#login_div {
    border: 0px;
    width: 500px;
    margin: auto;
    position: relative;
    text-align: center;
    top: 10%;
}

#login_div div {
    padding: 1em;
}

#login_title_div {
    font-size: var(--font-big);
    color: var(--color-dark);
    position: relative;
}

#login_to_balance_div {
    border-bottom: 1px solid var(--color-grey);
}

#main_content {
    width: 100%;
    min-height: 1200px;
    padding-top: 5em;
    max-width: 1200px;
    overflow: hidden;
    display: relative;
    margin: auto;
}

.link-selected {
    color: var(--color-link-selected);
}

.has-error {
    border-color: red !important;
}

.rounded-button {
    border: 0px;
    font-size: var(--font-medium);
    border-radius: 20px;
    margin: 0.25em;
    padding: 7pt 1.5em 7pt 1.5em;
    transition: background-color 0.2s;
}

.sub-window {
    /*
    padding: 0.5em;
    margin-top: 0.5em;
    margin-bottom: 0.5em;
    */
}

/*
.filter-menu {
    position: relative;
    background-color: var(--color-grey);
    width: 100%;
    margin-top: 0.5em;
    margin-bottom: 0.5em;
    padding-top: 25pt;
    box-sizing: border-box;
    display: grid;
    grid-template-columns: 1.3fr 1.3fr 5.4fr 4fr 4fr;
}

.filter-toggle-button {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    margin: auto;
    height: 20pt;
}
*/

.footer {
    margin-top: 10em;
    height: auto;
    padding-top: 2em;
    padding-bottom: 10em;
    text-align: center;
    background-color: var(--color-grey);
}

.nav-container {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 999;
}

.navbar {
    overflow: auto;
    width: 100%;
    max-width: 1200px;
}

.nav-wrapper {
    width: 100%;
    display: flex;
    justify-content: center;
    background-color: #555;
}

.subnav-wrapper {
    width: 100%;
    display: flex;
    justify-content: center;
    border-bottom: 1px solid #ddd;
}

.subbar {
    overflow: auto;
    max-width: 1200px;
    width: 100%;
    background-color: var(--color-bg);
    padding: 0px;
}

.subbar a {
    position: relative;
    float: left;
    background-color: var(--color-bg);
    border: 0px;
    padding: 5pt;
    margin-right: 5pt;
    text-decoration: none;
}

.subbar a:hover {
    text-decoration: underline;
}

.navbar a {
    text-align: center;
    padding: 12px;
    color: white;
    text-decoration: none;
    font-size: var(--font-big);
    float: left;
}

.navbar button {
    float: right;
}

.navbar a:hover {
    background-color: #222;
}

.active {
    background-color: var(--color-main);
}

.active:hover {
    background-color: var(--color-main) !important;
}

.color-accent {
    background-color: var(--color-accent);
    color: var(--color-accent-font);
}
.color-accent:hover {
    filter: brightness(0.9);
}

.color-main {
    color: var(--color-main);
}
.color-link {
    color: var(--color-link);
}


@media screen and (max-width: 640) {
    .navbar a {
        float: none;
        display: block;
    }
}

@media (max-width: 640px) {
    .transaction-row-wrapper {
        grid-template-columns: 1fr;
        padding-bottom: 2.5em;
    }
    .transaction-header-wrapper {
        border-bottom: var(--color-grey) solid 1px;
    }
    .transactions-header {
        display: none;
    }

    /*
    .filter-menu {
        grid-template-columns: 1fr;
    }
    */

    #new_transaction_button {
        position: fixed;
        z-index: 999;
        bottom: 3em;
        right: 1em;
        box-shadow: 0px 0px 20px #444;
    }
    .account-row {
        font-size: var(--font-medium);
    }

}

.gg-select {
    transform: scale(0.6);
}

